# sd-bitly-backend-mvp

./: .env.example  AGENTS.md  DEPLOY.md  DESIGN.md  Dockerfile  KICKOFF.md  README.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  functional.yml  lint.yml
alembic/: env.py
alembic/versions/: 001_create_urls_table.py
docs/: mvp-scope.md  system-design.md
src/bitly/: config.py  database.py  main.py  redis.py
src/bitly/models/: url.py
src/bitly/routers/: redirect.py  urls.py
src/bitly/schemas/: __init__.py  url.py
src/bitly/services/: codec.py  rate_limiter.py  url_service.py
tests/: test_config.py  test_health.py  test_models.py
tests/functional/: conftest.py  test_create_url.py  test_custom_alias.py  test_expiration.py  test_redirect.py  test_stats.py
tests/unit/: test_canonicalize.py  test_codec.py
verify/: __init__.py  manifest.env
verify/acceptance/: __init__.py  conftest.py  test_fr1_create.py  test_fr2_redirect.py  test_fr3_stats.py  test_fr4_custom_alias.py  test_fr5_expiration.py
