[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitly"
version = "0.1.0"
description = "Bitly URL Shortener MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "redis>=5.0,<6.0",
    "pydantic-settings>=2.0,<3.0",
    "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "httpx>=0.27,<1.0",
    "fakeredis[lua]>=2.20,<3.0",
    "aiosqlite>=0.19,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bitly"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["B008"]
per-file-ignores = { "verify/acceptance/*" = ["UP017", "B007"] }
